Fixed bug where content would be hidden by header

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -6,15 +6,21 @@
 $nav-height: 46px; // Height of links row of header
 
 .site-header {
+  position: fixed; // Always at top of page
+
   border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
   min-height: 150px;
 
-  // Positioning context for the mobile navigation icon
-  position: relative;
-
   // Background Image
   background-image: url("./../assets/images/Header_Image.png");
+
+  // To push main content lower and make visible under header
+  &-placeholder {
+    position: relative; // Push main content down
+    min-height: 150px; // Same height as site header
+    width: 100%; // Fill entire width
+  }
 }
 
 .site-title {
